<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name"><平安龙江></平安龙江></string>
    <string name="Version_number_is_wrong">Version number is wrong</string>
    <string name="now_refresh">now_refresh</string>
    <string name="no_more">no more</string>
    <string name="load_more">load more</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_html">HtmlActivity</string>
    <string name="function_title">功能</string>
    <string name="yewufuwu">业务服务</string>
    <string name="menu_icon_zaijia">加载中</string>
    <string name="menu_icon_shouye">首页</string>
    <string name="search">搜索</string>
    <string name="quanbu">全部</string>
    <string name="sx_name">请输入事项名称</string>
    <string name="geren">个人</string>
    <string name="danwei">企业</string>
    <string name="jingzhong">警种</string>
    <string name="feilei">分类</string>
    <string name="menu_sxzx">事项中心</string>


    <string name="ctid_app_name">公安无凝视</string>
    <string name="ctid_app_name_overlight">人像活体检测</string>
    <string name="ctid_app_name_picquality">人像质量判断</string>
    <string name="ctid_str_main">活体检测</string>
    <string name="ctid_str_main_btn_quality_judge">质量判断</string>
    <string name="ctid_str_main_btn_start_check">开始检测</string>
    <string name="ctid_str_main_btn_setting">设        置</string>
    <string name="ctid_str_main_btn_tip">左看：头向左偏，朝着卡通图看\n右看：头向右偏，朝着卡通图看</string>
    <string name="ctid_str_live_txt_title">请将脸置于提示框内</string>
    <string name="ctid_str_exit">很抱歉,程序出现异常,即将退出！</string>
    <string name="ctid_attention_not_shake">眼睛请盯着绿色圆圈，不要晃手机和头</string>
    <string name="ctid_btn_inc">&#62;</string>
    <string name="ctid_btn_dec">&#60;</string>
    <string name="ctid_btn_return">返回</string>
    <string name="ctid_btn_resume">重新开始(10s)</string>
    <string name="ctid_friendly_tip_0">未采集到合格的人像,再试一次吧!</string>
    <string name="ctid_friendly_tip_1">恭喜您,检测成功!</string>
    <string name="ctid_friendly_tip_2">很遗憾,检测失败!</string>
    <string name="ctid_friendly_tip_3">操作时间过长!</string>
    <string name="ctid_look_at_me">看着我</string>
    <string name="ctid_pic_decting">数据处理中</string>
    <string name="ctid_no_face">没有检测到人脸</string>
    <string name="ctid_multi_face">检测到多个人脸</string>
    <string name="ctid_no_best_pic">未找到最佳采集照片</string>
    <string name="ctid_camera_not_start">相机无法启动，请稍后重试或重新启动手机！</string>
    <string name="ctid_no_SDCard">"未发现SD卡，请稍后重试或重新启动手机！"</string>
    <string name="ctid_no_facing_front_camera">抱歉打开前置摄像头失败，请稍后再试</string>
    <string name="ctid_no_pass_reason_no_face">没有检测到人脸</string>
    <string name="ctid_no_pass_reason_multi_face">屏幕中存在多张人脸</string>
    <string name="ctid_no_pass_reason_skew_face">请正面面对屏幕</string>
    <string name="ctid_no_pass_reason_too_bright">环境光线过亮</string>
    <string name="ctid_no_pass_reason_too_dark">环境光线过暗</string>
    <string name="ctid_no_pass_reason_too_far">请靠近摄像头</string>
    <string name="ctid_no_pass_reason_blur">图像过于模糊</string>
    <string name="ctid_no_pass_reason_yawangle">左右姿态角度过大</string>
    <string name="ctid_no_pass_reason_picangle">俯仰角度过大</string>
    <string name="ctid_no_pass_reason_mouthclosed">嘴巴张开过大</string>

    <string name="ctid_env_pass">环境检测顺利完成...</string>
    <string name="ctid_gazing">检测中请盯小喵头像</string>
    <string name="ctid_face_in_box">请将脸置于提示框内</string>
    <string name="ctid_memory_not_enough">内存不足！</string>
    <string name="ctid_shake_head">请摇头</string>
    <string name="ctid_dect_fail">检测失败，请重新检测...</string>
    <string name="ctid_timerdialog_return">返      回</string>
    <string name="ctid_timerdialog_recheck">重新检测</string>
    <string name="ctid_str_look_left_right">请调整脸部位置，并按提示左看右看</string>


    <string name="title_alert">提示信息</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="title_activity_phone">PhoneActivity</string>
    <string name="title_activity_sf_info">SfInfoActivity</string>
</resources>