<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jingzhong"
        android:background="@color/bg_gray_light"/>
<android.support.v7.widget.RecyclerView
    android:id="@+id/rv_popup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feilei"
        android:background="@color/bg_gray_light"/>
    <RadioGroup
        android:id="@+id/rg_sxywdl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_quanbu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quanbu"
            android:checked="true"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/rb_geren"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/geren"
            android:checked="false"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/rb_danwei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/danwei"
            android:checked="false"
            android:layout_weight="1"/>
    </RadioGroup>
</LinearLayout>